frontend/k8s-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dev
spec:
  selector:
    app: frontend-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: dev

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: gitlab-df-registry.imt-atlantique.fr/devops-s24/devops-app-s24-13/frontend-final:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
