frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: my-root-ca-issuer

  labels:
    app: grafana
spec:
  rules:
  - host: frontend-imt-atlantique-devops-2024.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  tls:
  - hosts:
    - frontend-imt-atlantique-devops-2024.com
